<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.movie.DetailMovieActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_height_backdrop"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_height_backdrop"
                android:background="@drawable/bg_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/size_button_rounded"
                android:layout_height="@dimen/size_button_rounded"
                android:layout_marginStart="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_medium"
                android:background="@drawable/bg_rounded_button"
                android:padding="@dimen/size_padding_button"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_share"
                android:layout_width="@dimen/size_button_rounded"
                android:layout_height="@dimen/size_button_rounded"
                android:layout_marginTop="@dimen/size_medium"
                android:layout_marginEnd="@dimen/size_medium"
                android:background="@drawable/bg_rounded_button"
                android:padding="@dimen/size_padding_button"
                android:src="@drawable/ic_baseline_share_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="@dimen/size_button_rounded"
                android:layout_height="@dimen/size_button_rounded"
                android:layout_marginEnd="@dimen/size_medium"
                android:layout_marginBottom="@dimen/size_medium"
                android:background="@drawable/bg_rounded_button"
                android:padding="@dimen/size_padding_button"
                android:src="@drawable/ic_baseline_favorite_unselect_24"
                app:layout_constraintBottom_toBottomOf="@id/iv_backdrop"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_poster"
                android:layout_width="@dimen/size_width_poster"
                android:layout_height="@dimen/size_height_poster"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_height_poster_detail"
                android:elevation="@dimen/size_medium"
                android:innerRadius="@dimen/size_wrap"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardCornerRadius="@dimen/size_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="@dimen/size_wrap"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_small"
                android:layout_marginEnd="@dimen/size_medium"
                android:ellipsize="end"
                android:fontFamily="@font/bebas_neue"
                android:maxLines="3"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_font_24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_poster"
                app:layout_constraintTop_toBottomOf="@id/iv_backdrop" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_small"
                android:progressTint="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@id/tv_release_date"
                app:layout_constraintStart_toEndOf="@id/card_poster"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_extra_small"
                android:fontFamily="@font/bebas_neue"
                app:layout_constraintBottom_toBottomOf="@id/rating"
                app:layout_constraintStart_toEndOf="@id/rating"
                app:layout_constraintTop_toTopOf="@id/rating" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_release_date"
                android:layout_width="@dimen/size_wrap"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_medium"
                android:fontFamily="@font/bebas_neue"
                app:layout_constraintBottom_toBottomOf="@id/card_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_poster" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_large"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/text_genres"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_font_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_poster" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_loading_genres"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginHorizontal="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_extra_small"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_genres"
                tools:listitem="@layout/item_row_movies_genres" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_extra_small"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_genres"
                tools:listitem="@layout/item_row_movies_genres" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_production"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_medium"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/text_production_companies"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_font_16sp"
                app:constraint_referenced_ids="rv_genres,rv_loading_genres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_genres" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_production"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_extra_small"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_production" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_loading_production"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_marginHorizontal="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_extra_small"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_production" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_medium"
                android:layout_marginTop="@dimen/size_medium"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/text_overview"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_font_16sp"
                app:constraint_referenced_ids="rv_genres,rv_loading_genres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_production" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_medium"
                android:layout_marginVertical="@dimen/size_extra_small"
                android:fontFamily="@font/bebas_neue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>