<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/closeFavorite"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="@string/text_close"
        app:showAsAction="always" />
</menu>