...
                app:itemTextColor="@color/bottom_nav_color"
                app:menu="@menu/menu_bottom_nav" />

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/text_favorite"
            android:src="@drawable/ic_baseline_favorite_24"
...
